# databricks-schema

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/skills/databricks-schema-cli/: SKILL.md
.claude/skills/databricks-unity-catalog/: SKILL.md
.github/workflows/: ci.yml  release.yml
databricks_schema/: __init__.py  cli.py  dbml_gen.py  diff.py  extractor.py  models.py  sql_gen.py  validate.py  yaml_io.py
dbx_schema/: cli.py  extractor.py  models.py  yaml_io.py
examples/: 01_extract_schema.py  02_save_load_yaml.py  03_diff_schemas.py  04_generate_sql.py  full_example.py
tests/: test_dbml_gen.py  test_diff.py  test_extractor.py  test_models.py  test_sql_gen.py  test_validate.py  test_yaml_io.py
