[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["databricks_schema"]

[project]
name = "databricks-schema"
version = "0.4.0"
description = "Databricks Unity Catalog schema extractor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # >=0.64.0 as we use 'entity_tag_assignments'
    "databricks-sdk>=0.64.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
databricks-schema = "databricks_schema.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-mock>=3.14", "ruff>=0.9"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
